k8s/components/istio-base/templates/auth-server-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: auth-server-dr
spec:
  host: auth-server
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
