k8s/components/istio-base/templates/istio-base.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: hands-on-gw
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - example.com
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: tls-secret
        mode: SIMPLE

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hands-on-vs
spec:
  gateways:
    - hands-on-gw
  hosts:
    - example.com
  http:
    - match:
        - uri:
            prefix: /oauth2
      route:
        - destination:
            host: auth-server
    - match:
        - uri:
            prefix: /login
      route:
        - destination:
            host: auth-server
    - match:
        - uri:
            prefix: /error
      route:
        - destination:
            host: auth-server
    - match:
        - uri:
            prefix: /product-composite
      route:
        - destination:
            host: product-composite
            port:
              number: 80
    - match:
        - uri:
            prefix: /openapi
      route:
        - destination:
            host: product-composite
            port:
              number: 80
    - match:
        - uri:
            prefix: /webjars
      route:
        - destination:
            host: product-composite
            port:
              number: 80

---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: health-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - "health.example.com"
      port:
        number: 443
        name: https-health
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: tls-secret
---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: health-vs
spec:
  hosts:
    - "health.example.com"
  gateways:
    - health-gateway
  http:
    - route:
        - destination:
            host: product-composite
            port:
              number: 4004

---
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: product-composite-request-authentication
spec:
  jwtRules:
    - forwardOriginalToken: true
      issuer: http://auth-server
      jwksUri: http://auth-server.default.svc.cluster.local/oauth2/jwks
  selector:
    matchLabels:
      app.kubernetes.io/name: product-composite

---

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: product-composite-require-jwt
spec:
  action: ALLOW
  rules:
    - {}
  selector:
    matchLabels:
      app.kubernetes.io/name: product-composite

---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
spec:
  mtls:
    mode: PERMISSIVE
